# prosjekt_dat255

./: .gitignore  pyproject.toml
model/: model.ipynb
