[project]
name = "prosjekt-dat255"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "datasets==3.6.0",
    "huggingface-hub>=1.5.0",
    "ipykernel>=7.2.0",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pydub>=0.25.1",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
    "tfds-nightly>=4.9.9.dev202510250044",
]
